
                          Coccinella CHANGES
                          ------------------


Not to mention all bugfixes and rewrites.

Coccinella-0.95.10 (0509??):

	- server connections using http possible; http proxy added
	- added the tkpng package; png support now required
	- new icons from Everaldo
	- file transfer using si/bytestreams/ibb/file-transfer protocol
	- notification using bouncing dock icon on MacOSX
	- ignore menu option in groupchat
	- number of unread chat messages shown in tabs
	- historic chat messages in lighter color

Coccinella-0.95.9 (050821):

	- completely rewritten user interface with new theming engine (tile)
	- vCard avatar

Coccinella-0.95.8 (050620):

	- reworked the registration process

Coccinella-0.95.7 (050429):

	- added canvas locking mechanism

Coccinella-0.95.6 (050425):

	- added PLAIN sasl mechanism
	- updated QuickTime support which fixed an instabilty problem
          and an audio problem on Windows
	- fixed snapshot bug

Coccinella-0.95.5 (050311):

        - added support for kprinter on unix
	- status changes displayed in roster
	- roster remembers which dir items opened/closed
	- can hide offline/transports in roster
	- added a keepalive mechansism to guard against aggresive routers


Coccinella-0.95.4 (050126):

        - critical bug in one of the message catalogs


Coccinella-0.95.3 (050125):

        - minor bugfixes
	- added add server feature to disco


Coccinella-0.95.2 (041217): 	Short summary --

        - each page, roster, disco, browser, agents, now have their own status
	  widget
	- extended buddy pouncing
	- added automatic login option
	- improved smiley/url text parsing which is 20 times faster
	- reworked layoyt of tree widget
	- muc chatrooms now show users role
	- httpd can mount directories; using css for 404 and dir listings
	- the cache should now remember files between launches
	- bindings to Gnome Meeting on unix


Coccinella-0.95.1 (040930): 	Short summary --

	- SASL authentication